name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for homework #3
description:         Homework #3 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/homework-3-cannor147
license:             MIT
license-file:        LICENSE
author:              Erofey Bashunov
maintainer:          cannor147@gmail.com
copyright:           2022 Erofey Bashunov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:    src
  exposed-modules:   HW3.Base
                     HW3.Evaluator
                     HW3.Parser
                     HW3.Pretty
  ghc-options:       -Wall
  build-depends:     base >= 4.9 && < 5
               ,     scientific
               ,     megaparsec >= 9.0.1
               ,     prettyprinter
               ,     prettyprinter-ansi-terminal

  default-language:  Haskell2010

executable hi
    hs-source-dirs:  src
    main-is:         Main.hs
    other-modules:   HW3.Base
                     HW3.Evaluator
                     HW3.Parser
                     HW3.Pretty
    build-depends:   base >= 4.9 && < 5
                 ,   scientific
                 ,   megaparsec >= 9.0.1
                 ,   prettyprinter
                 ,   prettyprinter-ansi-terminal